# document_classification

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  settings.toml
.github/workflows/: ci.yml
app/: config.py  logging.py  main.py  model_loader.py  schemas.py  security.py
config/: model.toml  settings.toml
data/sample/business/: business_01.txt  business_02.txt  business_03.txt  business_04.txt  business_05.txt  business_06.txt  business_07.txt  business_08.txt
data/sample/entertainment/: entertainment_01.txt  entertainment_02.txt  entertainment_03.txt  entertainment_04.txt  entertainment_05.txt  entertainment_06.txt  entertainment_07.txt  entertainment_08.txt
data/sample/food/: food_01.txt  food_02.txt  food_03.txt  food_04.txt  food_05.txt  food_06.txt  food_07.txt  food_08.txt
data/sample/graphics/: graphics_01.txt  graphics_02.txt  graphics_03.txt  graphics_04.txt  graphics_05.txt  graphics_06.txt  graphics_07.txt  graphics_08.txt
data/sample/historical/: historical_01.txt  historical_02.txt  historical_03.txt  historical_04.txt  historical_05.txt  historical_06.txt  historical_07.txt  historical_08.txt
data/sample/medical/: medical_01.txt  medical_02.txt  medical_03.txt  medical_04.txt  medical_05.txt  medical_06.txt  medical_07.txt  medical_08.txt
data/sample/other/: other_01.txt  other_02.txt  other_03.txt
data/sample/politics/: politics_01.txt  politics_02.txt  politics_03.txt  politics_04.txt  politics_05.txt  politics_06.txt  politics_07.txt  politics_08.txt
data/sample/space/: space_01.txt  space_02.txt  space_03.txt  space_04.txt  space_05.txt  space_06.txt  space_07.txt  space_08.txt
docs/: readme_api.md  readme_model.md
infra/: README.md
notebooks/: 01_dataset_exploration.ipynb  02_model_experiments.ipynb  03_error_analysis.ipynb
reports/: classification_report.json  classification_report.txt  confidence_ranges.csv  confusion_matrix.csv  dataset_summary.csv  inference_benchmark.json  misclassified_examples.csv  model_comparison_cv.csv  ood_loco_curve.csv  other_holdout_predictions.csv  other_holdout_report.json  text_length_summary.csv  threshold_selection.json  threshold_tradeoff_test.csv  threshold_tradeoff_validation.csv  training_summary.json
scripts/: bootstrap.sh
src/: confidence_analysis.py  config.py  data_loader.py  evaluate.py  predict.py  train.py
tests/: conftest.py  test_api.py  test_confidence_analysis.py  test_config_logging.py  test_evaluate_reports.py  test_integration.py  test_loco_ood.py  test_predict.py  test_threshold_consistency.py
(+16 files in other folders)
