[project]
name = "document-classifier"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.7",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.5.8",
    "matplotlib>=3.11.0",
    "pip-audit>=2.10.1",
    "pytest>=9.0.3",
    "ruff>=0.15.17",
    "seaborn>=0.13.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["app", "src", "tests"]
exclude = [".venv", "models", "reports", "notebooks"]
