[project]
name = "document-classifier"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dynaconf>=3.2.13",
    "fastapi>=0.136.3",
    "joblib>=1.5.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-multipart>=0.0.32",
    "scikit-learn>=1.9.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.7",
    "ipykernel>=7.3.0",
    "jupyterlab>=4.5.8",
    "matplotlib>=3.11.0",
    "pip-audit>=2.10.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.17",
    "seaborn>=0.13.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: end-to-end tests against the real artifact/dataset (slow)",
]
# Integration tests depend on the large artifact/dataset, which may not be
# present locally or in CI, so exclude them from the default run. Opt in with
# `pytest -m integration`.
addopts = "-m 'not integration'"

[tool.coverage.run]
source = ["app", "src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
# Gate set below the measured unit-suite coverage (~73%) for headroom. The
# src pipeline modules (train/evaluate/data_loader) are exercised mainly by
# the opt-in integration suite; run `pytest -m integration` for fuller numbers.
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
include = ["app", "src", "tests"]
exclude = [".venv", "models", "reports", "notebooks"]
